--- a/app/TPOT_web_app/src/App.css
+++ b/app/TPOT_web_app/src/App.css
@@ -45,10 +45,14 @@ button {
 	margin-left: 25%;
 }
 
-.label, .legend {
+.legend {
 	font-style: italic;	
 	font-weight: bold;
 	margin-bottom: 5px;
+}
+
+.type{
+	font-style: italic;	
 }
 
 .tickmarks {
