--- a/app/TPOT_web_app/src/App.css
+++ b/app/TPOT_web_app/src/App.css
@@ -1,8 +1,8 @@
 * {
   background: #2c2c54;
-  white-space: nowrap;
   color: #f7f1e3;
   text-align: center;
+  min-width: 0px !important;
 }
 
 div, p {
@@ -48,7 +48,7 @@ input[type=range]:focus::-webkit-slider-runnable-track {
 
 .UI_wrapper {
   display: grid;
-  grid-auto-rows: repeat(4, 1fr);
+  grid-auto-rows: auto;
   grid-template-columns: 1fr 1fr;
   gap: 10px;
   width: 100vw;
@@ -58,6 +58,7 @@ input[type=range]:focus::-webkit-slider-runnable-track {
 
 .ui_item {
   margin: 30px;
+  width: auto;
 }
 
 .ui_item:nth-child(23) {
@@ -67,10 +68,15 @@ input[type=range]:focus::-webkit-slider-runnable-track {
 .fieldset {
   border: 1px solid deeppink;
   background: #262645;
+  border-radius: 6px;
 }
 
 .fieldset:hover {
   box-shadow: 2px 2px 30px black;;
+}
+
+.choice_title {
+  font-size: 1.3vw;
 }
 
 button {
@@ -106,8 +112,6 @@ input {
   padding: 10px;
   background: tomato;
   color: whitesmoke;
-  float: left !important;
-  margin-left: 280px;
 }
 
 #log_area {
@@ -159,69 +163,6 @@ input {
 	margin-top: 20px;
 }
 
-.wrapper {
-  display: grid;
-  grid-template-rows: 100%;
-  grid-template-columns: 45% 10% 45%;
-  gap: 10px;
-  width: 80vw;
-  height: 70vh;
-  margin-top: 70px;
-}
-
-.item {
-  background: transparent;
-  padding: 10px;
-}
-
-.item:nth-child(2) {
-  align-self: center;
-  text-align: center;
-}
-
-.icon {
-  fill: whitesmoke;
-  font-size: 60px;
-  cursor: pointer;
-}
-
-textarea {
-  resize: none;
-  width: 100%;
-  height: 100%;
-  -webkit-box-sizing: border-box; 
-  -moz-box-sizing: border-box;    
-  box-sizing: border-box;      
-  background: #d1ccc0;
-  border: none;
-  padding: 10px;
-  font-size: 18px;
-  font-family: arial;
-  border-radius: 4px;
-}
-
-.hold_plot {
-  width: 100%;
-  height: 100%;
-  -webkit-box-sizing: border-box; 
-  -moz-box-sizing: border-box;    
-  box-sizing: border-box;      
-  background:#2c2c54;
-  border: none;
-  padding: 10px;
-  border-radius: 4px;
-}
-
-@media only screen and (max-width: 1000px) {
-  .wrapper {
-    display: grid;
-    grid-template-rows:  45% 10% 45%;
-    grid-template-columns: 100%;
-  }
-  svg {
-    transform: rotate(90deg);
-  }
-}
 
 #train_button {
   margin-bottom: 40px;
@@ -258,4 +199,11 @@ textarea {
 
 .description {
   margin-top: 20px;
+}
+
+@media only screen and (max-width: 1000px) {
+  .UI_wrapper {
+    grid-auto-rows: auto;
+  grid-template-columns: 100%;
+  }
 }
