--- a/app/TPOT_web_app/src/App.css
+++ b/app/TPOT_web_app/src/App.css
@@ -1,12 +1,13 @@
 * {
-  background: #2c2c54;
-  color: #f7f1e3;
-  text-align: center;
-  min-width: 0px !important;
+	background: #2c2c54;
+	color: #f7f1e3;
+	text-align: center;
+	min-width: 0px !important;
 }
 
-div, p {
-  background: transparent;
+div,
+p {
+	background: transparent;
 }
 
 input[type=range] {
@@ -16,8 +17,8 @@ input[type=range] {
 	-khtml-user-select: none;
 	-moz-user-select: none;
 	-ms-user-select: none;
-    user-select: none;
-    background: transparent;
+	user-select: none;
+	background: transparent;
 }
 
 input[type=range]::-webkit-slider-runnable-track {
@@ -47,113 +48,110 @@ input[type=range]:focus::-webkit-slider-runnable-track {
 }
 
 .UI_wrapper {
-  display: grid;
-  grid-auto-rows: auto;
-  grid-template-columns: 1fr 1fr;
-  gap: 10px;
-  width: 100vw;
-  height: 100vh;
-  background: transparent;
+	display: grid;
+	grid-auto-rows: auto;
+	grid-template-columns: 1fr 1fr;
+	gap: 10px;
+	width: 100vw;
+	height: 100vh;
+	background: transparent;
 }
 
 .ui_item {
-  margin: 30px;
-  width: auto;
+	margin: 30px;
+	width: auto;
 }
 
 .ui_item:nth-child(23) {
-  grid-column: 1 / span 2;
+	grid-column: 1 / span 2;
 }
 
 .fieldset {
-  border: 1px solid deeppink;
-  background: #262645;
-  border-radius: 6px;
+	border: 1px solid deeppink;
+	background: #262645;
+	border-radius: 6px;
 }
 
 .fieldset:hover {
-  box-shadow: 2px 2px 30px black;;
+	box-shadow: 2px 2px 30px black;
+	;
 }
 
 .choice_title {
-  font-size: 1.3vw;
+	font-size: 1.3vw;
 }
 
 button {
-  height: auto;
-  width: auto;
-  border: none;
-  background: #ff5252;
-  color: whitesmoke;
-  border-radius: 4px;
-  font-size: 17px;
-  cursor: pointer;
-  padding: 10px;
+	height: auto;
+	width: auto;
+	border: none;
+	background: #ff5252;
+	color: whitesmoke;
+	border-radius: 4px;
+	font-size: 17px;
+	cursor: pointer;
+	padding: 10px;
 }
 
 input {
-  border: none;
-  height: 30px;
-  border-radius: 4px;
-  background: whitesmoke;
-  color: #141414;
-  font-size: 16px;
-  text-align: left !important;
-  padding-left: 5px;
+	border: none;
+	height: 30px;
+	border-radius: 4px;
+	background: whitesmoke;
+	color: #141414;
+	font-size: 16px;
+	text-align: left !important;
+	padding-left: 5px;
 }
 
 #data {
-  visibility: hidden;
+	visibility: hidden;
 }
 
 #data_shown {
-  height: auto;
-  width: auto;
-  padding: 10px;
-  background: tomato;
-  color: whitesmoke;
+	height: auto;
+	width: auto;
+	padding: 10px;
+	background: tomato;
+	color: whitesmoke;
 }
 
 #log_area {
-  background: #161633;
-  overflow: scroll;
-  margin: 0px !important;
-  border-radius: 8px;
-  color: whitesmoke;
+	background: #161633;
+	overflow: scroll;
+	margin: 0px !important;
+	border-radius: 8px;
+	color: whitesmoke;
 }
 
-.title, .subtitle {
-  text-align: center;
+.title,
+.subtitle {
+	text-align: center;
 }
+
 .title {
-  font-size: 40px;
-  font-style: italic;
+	font-size: 40px;
+	font-style: italic;
 }
 
 .subtitle {
-  margin-top: -30px;
-  font-size: 24px;
+	margin-top: -30px;
+	font-size: 24px;
 }
 
 .legend {
-	font-style: italic;	
+	font-style: italic;
 	font-weight: bold;
 	margin-bottom: 5px;
-  font-size: 20px;
+	font-size: 20px;
 }
 
-.type{
-	font-style: italic;	
+.type {
+	font-style: italic;
 }
 
 .tickmarks {
-	background: repeating-linear-gradient(to right, 
-    #ccc, 
-    #ccc 10%, 
-    #000 10%, 
-    #000 11%, 
-    #ccc 11%, 
-    #ccc 20%);
+	background: repeating-linear-gradient(to right, #ccc, #ccc 10%, #000 10%, #000 11%, #ccc 11%, #ccc 20%);
 }
 
 .log {
@@ -163,47 +161,49 @@ input {
 	margin-top: 20px;
 }
 
-
 #train_button {
-  margin-bottom: 40px;
+	margin-bottom: 40px;
 }
 
 .toggle_wrapper {
-  display: flex;
-  background: transparent;
-  width: 80%;
-  justify-content: space-evenly;
-  text-align: center;
-  margin-left: 50px;
+	display: flex;
+	background: transparent;
+	width: 80%;
+	justify-content: space-evenly;
+	text-align: center;
+	margin-left: 50px;
 }
 
 .ball {
-    width : 25px;
-    height : 25px;
-    background : red;
-    border-radius : 50%;
-    margin-left :  0px;
-    cursor: pointer
+	width: 25px;
+	height: 25px;
+	background: red;
+	border-radius: 50%;
+	margin-left: 0px;
+	cursor: pointer
 }
 
 .ball_container {
-  width: 60px;
-  background: #786fa6;
-  border-radius: 20%;
+	width: 60px;
+	background: #786fa6;
+	border-radius: 20%;
 }
 
 #ball_id {
-  margin-left : 35px;
-  background: limegreen;
+	margin-left: 35px;
+	background: limegreen;
 }
 
 .description {
-  margin-top: 20px;
+	margin-top: 20px;
 }
 
 @media only screen and (max-width: 1000px) {
-  .UI_wrapper {
-    grid-auto-rows: auto;
-  grid-template-columns: 100%;
+	.UI_wrapper {
+		grid-template-rows: auto;
+		grid-template-columns: 100vw;
+	}
+  .ui_item:nth-child(23) {
+    grid-column: 1 / span 1;
   }
 }
